<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/sms_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="notworry.rj.edu.notworry.Ui.Activity.SMSActivity">

    <FrameLayout

        android:layout_centerInParent="true"
        android:paddingTop="70dp"
        android:layout_width="320dp"
        android:layout_height="460dp">
        <android.support.v7.widget.CardView
            android:id="@+id/sms"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
           >
            <ImageView
                android:background="@drawable/carsms"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_marginTop="50dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="50dp"
                   android:text="@string/SMS"
                   android:textColor="#2fa881"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   />
               <LinearLayout
                   android:layout_marginTop="10dp"
                   android:paddingStart="50dp"
                   android:paddingEnd="30dp"
                   android:layout_width="match_parent"
                   android:layout_height="40dp">
                   <android.support.design.widget.TextInputLayout
                       android:textColorHint="#2fa881"
                       android:layout_width="0dp"
                       android:layout_weight="7"
                       android:theme="@style/TextLabel"
                       android:layout_height="wrap_content">
                       <EditText
                           android:textSize="13sp"
                           android:hint="@string/phone"
                           android:textColor="#f0f7f4"
                           android:id="@+id/et_phone"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textPersonName"
                           android:background="@drawable/selector_bg_edit_2"
                           android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           android:paddingBottom="2dp"
                           />
                   </android.support.design.widget.TextInputLayout>
                   <Button
                       android:textSize="13sp"
                       android:id="@+id/bt_num"
                       android:layout_width="0dp"
                       android:layout_weight="3"
                       android:layout_height="wrap_content"
                       android:inputType="text"
                       android:background="@drawable/bt_shape_2"
                       android:stateListAnimator="@drawable/state_list_animator_z"
                       android:textCursorDrawable="@drawable/bg_input_cursor_2"
                       android:gravity="center"
                       android:layout_marginBottom="10dp"
                       android:text="@string/num"
                       android:textColor="#2fa881"
                       >
                   </Button>
               </LinearLayout>
               <LinearLayout
                   android:paddingStart="50dp"
                   android:paddingEnd="30dp"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="40dp">
                   <android.support.design.widget.TextInputLayout

                       android:textColorHint="#2fa881"
                       android:theme="@style/TextLabel"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                       <EditText
                           android:textSize="13sp"
                           android:hint="@string/verification"
                           android:textColor="#f0f7f4"
                           android:id="@+id/et_num"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textPassword"
                           android:background="@drawable/selector_bg_edit_2"
                           android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           android:paddingBottom="2dp"
                           />
                   </android.support.design.widget.TextInputLayout>
               </LinearLayout>


               <Button
                   android:stateListAnimator="@drawable/state_list_animator_z"
                   android:textCursorDrawable="@drawable/bg_input_cursor_2"
                   android:layout_gravity="center_horizontal"
                   android:id="@+id/bt_sms_go"
                   android:gravity="center"
                   android:textSize="20dp"
                   android:background="@drawable/bt_shape_2"
                   android:layout_width="150dp"
                   android:layout_height="30dp"
                   android:text="@string/next"
                   android:textColor="#2fa881"
                   >
               </Button>

           </LinearLayout>
            </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</RelativeLayout>
